fix double-digit vote reveal overflow
fixes #13

--- a/styles/index.less
+++ b/styles/index.less
@@ -262,11 +262,12 @@ h2 {
 }
 
 .mission-page.revealed .vote-holder {
-    width: 260px;
+    width: 280px;
     margin: 0 auto;
 }
 
 .mission-page.revealed .labeled-number {
+    width: 80px;
     float: left;
     margin: 0 30px;
 }
